# DELIVERY-AUTORESEARCH-AGENT

./: .env.example  .gitignore  LICENSE  Makefile  README.md  langgraph.json  pyproject.toml
.github/workflows/: ci.yml
examples/: sample_experiment_log.json
scripts/: capture_replay_fixture.py  check_llm.py  configure_deepseek.py  render_agent_graph.py  run_baseline_experiment.py  run_research_loop.py  run_strategy_sweep.py  run_tool_calling_demo.py
solvers/: agent_suggested_solver.py  prior_solver.py  solver.py
src/autoresearch_agent/: __init__.py  context.py  graph.py  prompts.py  replay.py  state.py  tool_calling_demo.py  tools.py  utils.py
src/autoresearch_agent/research/: __init__.py  autopilot.py  evaluator.py  evidence.py  experiment_store.py  llm_decision.py  loop_runner.py  planner.py  reporter.py  strategy_renderer.py  strategy_space.py
src/autoresearch_agent/solver_dev/: __init__.py  case_suite.py  metrics.py  packager.py  parser.py  runner.py  validator.py  variants.py
tests/solver_tests/: test_solver_contract.py
tests/unit_tests/: test_agent_structure.py  test_autopilot.py  test_evaluator.py  test_evidence.py  test_llm_decision.py  test_replay.py  test_solver_dev.py  test_strategy_space.py  test_tool_calling_demo.py
